PUT, DELETE requests

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <a href="#" id="teste">Teste</a><br><br>
     <input type="text" id="inputTeste" value="Value"/> <br><br>
     <button id="btnShowHide">Mostrar/Esconder input</button>
-    <script src="notjquery.js"></script>
+    <script src="lib/notjquery.min.js"></script>
     
     <script>
         console.log($('#teste').html())
