fadeIn, fadeOut, fade

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         $('#btnShowHide').on('click', ()=> {
-            $('#inputTeste').toggle(callbackTeste)
+            $('#inputTeste').fade()
         })
 
         async function teste(){
